--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,11 @@ compiler:
   - clang
   - gcc
 
+matrix:
+  exclude:
+      - os: osx
+        compiler: gcc
+        
 script : 
   - make 
   - ./sysnet -a
