--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ addons:
       - wget
 
 script :
-  - git clone https://github.com/matteyeux/libcpuid && cd libcpuid && ./autogen.sh && sudo make install 
+  - git clone https://github.com/matteyeux/libcpuid && cd libcpuid && ./autogen.sh && sudo make install && sudo ldconfig
   - cd ../ && make # Leaving libcpuid directory
   - ./sysnet -a
 
