--- a/resources/control
+++ b/resources/control
@@ -1,9 +1,9 @@
 Package: sysnet
-Version: 1.0
+Version: 1.1.1
 Section: system
 Priority: optional
 Architecture: all
 Depends:bash
 Maintainer: Mathieu Hautebas <mathieu.hautebas@gmail.com>
-Description: A tool to recover system and network informations.
-Homepage:http://matteyeux.github.io
+Description: A to grab system and network information.
+Homepage: www.matteyeux.me
