Forgot to modify path to travis test script in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ matrix:
         compiler: gcc
         
 script : 
-  - ./resources/travis-tests.sh 
+  - ./scripts/travis-tests.sh 
 
 notifications:
 slack: racletteteam:OmAVC9pxpO7jpkoUR9HICnYS
