--- a/resources/control
+++ b/resources/control
@@ -1,9 +1,9 @@
 Package:sysnet
-Version:1.2.1
+Version:1.2.2
 Section: system
 Priority: optional
 Architecture: all
 Depends: bash
 Maintainer: Mathieu Hautebas <mathieu.hautebas@gmail.com>
-Description: A to grab system and network information.
+Description: A tool grab system and network information.
 Homepage: www.matteyeux.me
