--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ matrix:
         compiler: gcc
         
 before_script : 
-  - sudo apt-get install libiw-dev
+  - if [[ "$TRAVIS_OS_NAME" != "osx" ]]; then sudo apt-get install libiw-dev; fi
 
 script : 
   - ./scripts/travis-tests.sh 
